# opencv_cli

./: .gitignore  CMakeLists.txt  README.md  opencli
lib/: cli.cpp  cli.hpp  facedetection.cpp  facedetection.h  imgproc.cpp  imgproc.hpp  virtualpainter.cpp  virtualpainter.h
src/: main.cc
